--- a/configs/default.config
+++ b/configs/default.config
@@ -3,7 +3,7 @@ version=0.1
 motd=./files/motd.txt
 admin=./files/admin.txt
 admin_email=<gizawahr@student.42.fr>, <tsavale@student.42.fr>
-info=./files/info.txt
+info=./files/Version.txt
 max=5000
 oper_user=admin
 oper_password=admin
